[package]
name = "randomf"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
description = "simple cli to generate random numbers"
license = "MIT"
documentation = "./README.md"
repository = "https://github.com/nilsmartel/randomf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"              # Random number generators and other randomness functionality.
